--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "pixi.js": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "readable-stream": "^4.1.0",
     "vosk-browser": "^0.0.7"
   },
   "devDependencies": {
