--- a/package.json
+++ b/package.json
@@ -6,10 +6,12 @@
   "private": true,
   "dependencies": {
     "@inlet/react-pixi": "^6.8.0",
+    "microphone-stream": "^6.0.1",
     "pixi-viewport": "^4.34.4",
     "pixi.js": "^6.5.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "readable-stream": "^4.1.0",
     "vosk-browser": "^0.0.7"
   },
   "devDependencies": {
