--- a/package.json
+++ b/package.json
@@ -1,36 +1,36 @@
 {
-  "name": "cljs-atc",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "private": true,
-  "dependencies": {
-    "@inlet/react-pixi": "^6.8.0",
-    "microphone-stream": "^6.0.1",
-    "pixi-viewport": "^4.34.4",
-    "pixi.js": "^6.5.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "readable-stream": "^4.1.0",
-    "vosk-browser": "^0.0.7"
-  },
-  "devDependencies": {
-    "karma": "^6.4.0",
-    "karma-chrome-launcher": "^3.0.0",
-    "karma-cljs-test": "^0.1.0",
-    "process": "^0.11.10",
-    "react-flip-move": "^3.0.1",
-    "react-highlight.js": "^1.0.7",
-    "shadow-cljs": "2.19.6"
-  },
-  "scripts": {
-    "lint": "clojure -Sdeps '{:deps {clj-kondo {:mvn/version \"RELEASE\"}}}' -m clj-kondo.main --lint src --config .clj-kondo/config.edn",
-    "lint:init": "clojure -Sdeps '{:deps {clj-kondo {:mvn/version \"RELEASE\"}}}' -m clj-kondo.main --lint \"$(shadow-cljs classpath)\" --config .clj-kondo/config.edn",
-    "build": "shadow-cljs release :app",
-    "dev": "shadow-cljs start && shadow-cljs watch :app",
-    "stop": "shadow-cljs stop",
-    "test": "shadow-cljs compile ci && karma start --single-run"
-  },
-  "author": "",
-  "license": "ISC"
+    "name": "cljs-atc",
+    "version": "1.0.0",
+    "description": "",
+    "main": "index.js",
+    "private": true,
+    "dependencies": {
+        "@inlet/react-pixi": "^6.8.0",
+        "microphone-stream": "^6.0.1",
+        "pixi-viewport": "^4.34.4",
+        "pixi.js": "^6.5.1",
+        "react": "^18.2.0",
+        "react-dom": "^18.2.0",
+        "readable-stream": "^4.1.0",
+        "vosk-browser": "^0.0.7"
+    },
+    "devDependencies": {
+        "karma": "^6.4.0",
+        "karma-chrome-launcher": "^3.0.0",
+        "karma-cljs-test": "^0.1.0",
+        "process": "^0.11.10",
+        "react-flip-move": "^3.0.1",
+        "react-highlight.js": "^1.0.7",
+        "shadow-cljs": "2.19.6"
+    },
+    "scripts": {
+        "lint": "clojure -Sdeps '{:deps {clj-kondo/clj-kondo {:mvn/version \"RELEASE\"}}}' -M -m clj-kondo.main --lint src --config .clj-kondo/config.edn",
+        "lint:init": "clojure -Sdeps '{:deps {clj-kondo/clj-kondo {:mvn/version \"RELEASE\"}}}' -M -m clj-kondo.main --lint \"$(shadow-cljs classpath)\" --config .clj-kondo/config.edn",
+        "build": "shadow-cljs release :app",
+        "dev": "shadow-cljs start && shadow-cljs watch :app",
+        "stop": "shadow-cljs stop",
+        "test": "shadow-cljs compile ci && karma start --single-run"
+    },
+    "author": "",
+    "license": "ISC"
 }
