Experiment with reading AIXM formatted data
Sadly things like the navaids in the area, sids/stars, etc. are not
included in AIXM format yet. But the XML was very slow to parse anyway
so maybe this is a blessing.

--- a/package.json
+++ b/package.json
@@ -31,7 +31,9 @@
         "dev": "shadow-cljs start && shadow-cljs watch :app",
         "start": "shadow-cljs start",
         "stop": "shadow-cljs stop",
-        "test": "shadow-cljs compile ci && karma start --single-run"
+        "test": "shadow-cljs compile ci && karma start --single-run",
+        "tool:repl": "clojure -Mtool/repl",
+        "tool": "clojure -Mtool"
     },
     "author": "",
     "license": "ISC"
