--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "main": "index.js",
     "private": true,
     "dependencies": {
-        "@inlet/react-pixi": "^6.8.0",
+        "@pixi/react": "^7.1.0",
         "microphone-stream": "^6.0.1",
         "pixi-viewport": "^5.0.1",
         "pixi.js": "^7.2.4",
