--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
         "process": "^0.11.10",
         "react-flip-move": "^3.0.1",
         "react-highlight.js": "^1.0.7",
-        "shadow-cljs": "2.19.6"
+        "shadow-cljs": "^2.25.1"
     },
     "scripts": {
         "lint": "clojure -Sdeps '{:deps {clj-kondo/clj-kondo {:mvn/version \"RELEASE\"}}}' -M -m clj-kondo.main --lint src --config .clj-kondo/config.edn",
