--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "private": true,
     "dependencies": {
         "@inlet/react-pixi": "^6.8.0",
+        "@pixi/math-extras": "^6.5.1",
         "microphone-stream": "^6.0.1",
         "pixi-viewport": "^4.34.4",
         "pixi.js": "^6.5.1",
