--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "type": "module",
     "private": true,
     "dependencies": {
+        "@diffusionstudio/vits-web": "^1.0.3",
         "@inlet/react-pixi": "^6.8.0",
         "@mintplex-labs/piper-tts-web": "^1.0.4",
         "@pixi/math-extras": "^6.5.1",
@@ -15,6 +16,7 @@
         "react": "^17",
         "react-dom": "^17",
         "readable-stream": "^4.1.0",
+        "tone": "^15.0.4",
         "vosk-browser": "^0.0.8"
     },
     "devDependencies": {
@@ -46,6 +48,7 @@
     "license": "ISC",
     "pnpm": {
         "patchedDependencies": {
+            "@diffusionstudio/vits-web": "patches/@diffusionstudio__vits-web.patch",
             "readable-stream@3.6.0": "patches/readable-stream@3.6.0.patch"
         }
     }
